[package]
name = "health-check-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
pingora = { version = "0.7", features = ["proxy"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
